--- a/courses.html
+++ b/courses.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css.map">
-  <link rel="stylesheet" href="css/main.css">
   <title>Courses</title>
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-      <!-- removed the div here -->
       <div class="container">
         <a class="navbar-brand" href="index.html"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
@@ -21,15 +19,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li id="text" class="nav-item mx-3"><a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Courses</a>
-          </li>
-          <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
-          </li>
-          <a href="#"><img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px"></a>
+            <li id="text" class="nav-item mx-3"><a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Courses</a>
+            </li>
+            <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
+            </li>  
         </ul>
       </div>
         <!-- Testing out if i remove the div , how it will display in live server -->
@@ -42,49 +39,49 @@
 
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-sm-3">
           <div class="my-5 ml-3">
             <div>
               <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
               <p id="text" class="text-center small">12 Week Course - In classroom</p> 
             </div>
           <div class="d-flex justify-content-center">
-          <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="width: 15rem;">
+          <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="max-width: 100%;width: 15rem;">
           </div>
           <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
-          <div class="" style="width: 190px;">
-            <p id="addCart" style="padding-top: 5px;">Add to cart</p>  
-          </div>
+            <div class="d-flex justify-content-center">
+              <p id="addCart">Add to cart</p>
+            </div>     
           </div>
         </div>
         <div class="col-8 mt-4 ml-5">
           <div class="mb-5">
-            <h1 id="text">
-              Course Outline
-            </h1>
+            <h2 id="text">
+              <small id="course">Course Outline</small>
+            </h2>
           </div>
           <div class="row ml-1 my-4">
-            <div class="col small">
+            <div class="col-sm small">
               <a id="text" href="">Pre Work</a>
             </div>
-            <div class="col small">
+            <div class="col-sm small">
              <a id="text" href=""> Module 1</a>
             </div>
-            <div class="col small">
+            <div class="col-sm small">
               <a id="text" href="">Module 2</a>
             </div>
-            <div class="col small">
+            <div class="col-sm small">
               <a id="text" href="">Module 3</a>
             </div>
-            <div class="col small">
+            <div class="col-sm small">
               <a id="text" href="">Module 4</a>
             </div>
-            <div class="col-3 small">
+            <div class="col-sm-3 small">
               <a id="text" href="">Master class electives</a>
             </div>
           </div>
           <div class="row">
-            <div class="bg-light my-3 p-5 ml-4">
+            <div id="pre-work" class="bg-light my-3 p-5 ml-4">
               <div class="mb-4">
                 <h4 id="text">Pre-Work</h4>
               </div>
@@ -115,7 +112,7 @@
                            <div id="text" class="media-body">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
                            </div>
                           </li>
-                        </ul> 
+                        </ul>
                       </div>
                       <div class="modal-footer">
                         <button id="submit" class="btn btn-outline-primary" data-dismiss="modal">Submit</button>
@@ -208,11 +205,11 @@
     </div>   
   </section>
   <footer>
-    <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #0E1011;">
+    <nav class="navbar navbar-expand-sm" style="height: auto; background-color: #0E1011;">
       <ul class="navbar-nav">
         <li class="nav-items text-light ml-5 footer-copyright" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
       </ul>
-      <div class="ml-auto pr-5">
+      <div id="pic01" class="pr-5">
         <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
        <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
         <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
