--- a/courses.html
+++ b/courses.html
@@ -10,6 +10,9 @@
   <title>Courses</title>
 </head>
 <body>
+
+<!-- Nav Section -->
+
   <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
       <div class="container">
@@ -28,194 +31,205 @@
             <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
             </li>  
         </ul>
-      </div>
-        <!-- Testing out if i remove the div , how it will display in live server -->
+        </div>
       </div>  
     </nav>
   </header>
-  <section>
-    <div class="container-fluid mt-5">
-      <div class="row" style="height: 40px;">
 
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="my-5 ml-3">
-            <div>
-              <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
-              <p id="text" class="text-center small">12 Week Course - In classroom</p> 
-            </div>
-          <div class="d-flex justify-content-center">
-          <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="max-width: 100%;width: 15rem;">
+<!-- Main Section -->
+
+<section>
+  <div class="container-fluid mt-5">
+    <div class="row" style="height: 40px;">
+    </div>
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="my-5 ml-3">
+          <div>
+            <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
+            <p id="text" class="text-center small">12 Week Course - In classroom</p> 
           </div>
-          <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
-            <div class="d-flex justify-content-center">
-              <p id="addCart">Add to cart</p>
-            </div>     
+        <div class="d-flex justify-content-center">
+        <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="max-width: 100%;width: 15rem;">
+        </div>
+        <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-outline-primary text-center" id="addCart">
+              <span id="text">Add to cart</span>
+            </button>
+          </div>     
+        </div>
+      </div>
+      <div class="col-8 mt-4 ml-5">
+        <div class="mb-5">
+          <h2 id="text">
+            <small id="course">Course Outline</small>
+          </h2>
+        </div>
+        <div class="row ml-1 my-4">
+          <div class="col-sm small">
+            <a id="text" href="">Pre Work</a>
+          </div>
+          <div class="col-sm small">
+            <a id="text" href=""> Module 1</a>
+          </div>
+          <div class="col-sm small">
+            <a id="text" href="">Module 2</a>
+          </div>
+          <div class="col-sm small">
+            <a id="text" href="">Module 3</a>
+          </div>
+          <div class="col-sm small">
+            <a id="text" href="">Module 4</a>
+          </div>
+          <div class="col-sm-3 small">
+            <a id="text" href="">Master class electives</a>
           </div>
         </div>
-        <div class="col-8 mt-4 ml-5">
-          <div class="mb-5">
-            <h2 id="text">
-              <small id="course">Course Outline</small>
-            </h2>
-          </div>
-          <div class="row ml-1 my-4">
-            <div class="col-sm small">
-              <a id="text" href="">Pre Work</a>
+        <div class="row">
+          <div id="pre-work" class="bg-light my-3 p-5 ml-4">
+            <div class="mb-4">
+              <h4 id="text">Pre-Work</h4>
             </div>
-            <div class="col-sm small">
-             <a id="text" href=""> Module 1</a>
-            </div>
-            <div class="col-sm small">
-              <a id="text" href="">Module 2</a>
-            </div>
-            <div class="col-sm small">
-              <a id="text" href="">Module 3</a>
-            </div>
-            <div class="col-sm small">
-              <a id="text" href="">Module 4</a>
-            </div>
-            <div class="col-sm-3 small">
-              <a id="text" href="">Master class electives</a>
+            <div>
+              <p id="text" style="line-height: 2.19;">You don’t have to understand everything about the MEAN stack to dive in to the introductory tutorial. Your initial challenge will be to build Google’s official “Tour of Heroes” app. Don’t worry! We’re going to explain the hard parts in great detail during your course.</p>
             </div>
           </div>
-          <div class="row">
-            <div id="pre-work" class="bg-light my-3 p-5 ml-4">
-              <div class="mb-4">
-                <h4 id="text">Pre-Work</h4>
-              </div>
-              <div>
-                <p id="text" style="line-height: 2.19;">You don’t have to understand everything about the MEAN stack to dive in to the introductory tutorial. Your initial challenge will be to build Google’s official “Tour of Heroes” app. Don’t worry! We’re going to explain the hard parts in great detail during your course.</p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div id="box1" class="bg-light my-4 p-5 ml-4">
-              <ul class="list-unstyled">
-               <li class="media">
-                <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt="">
-              <div class="media-body">
-                <p id="text">Want to find out more about what you will learn during our 12 Week Full Stack Web Developer Course.</p> 
-                <a id="text" data-toggle="modal" data-target="#courseModal" href="">Click here to Download the Curriculum </a>
-
-                <div class="modal" id="courseModal">
-                  <div class="modal-dialog">
-                    <div class="modal-content" style="width: 800px;">
-                      <div class="modal-header">
-                        <button class="close" data-dismiss="modal">&times;</button>
-                      </div>
-                      <div class="modal-body">
-                        <ul class="list-unstyled">
-                          <li class="media">
-                            <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt=""> 
-                           <div id="text" class="media-body">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
-                           </div>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="modal-footer">
-                        <button id="submit" class="btn btn-outline-primary" data-dismiss="modal">Submit</button>
-                      </div>
-                      </div>
+        </div>
+        <div class="row">
+          <div id="box1" class="bg-light my-4 p-5 ml-4">
+            <ul class="list-unstyled">
+              <li class="media">
+              <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt="">
+            <div class="media-body">
+              <p id="text">Want to find out more about what you will learn during our 12 Week Full Stack Web Developer Course.</p> 
+              <a id="text" data-toggle="modal" data-target="#courseModal" href="">Click here to Download the Curriculum </a>
+              <div class="modal" id="courseModal">
+                <div class="modal-dialog">
+                  <div class="modal-content" style="width: 800px;">
+                    <div class="modal-header">
+                      <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                      <ul class="list-unstyled">
+                        <li class="media">
+                          <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt=""> 
+                          <div id="text" class="media-body">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
+                          <div class="media-body">
+                            <input class="form-control w-50" type="email" placeholder="Enter your email here">
+                          </div>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="modal-footer">
+                      <button id="submit" class="btn btn-outline-primary" data-dismiss="modal">Submit</button>
+                    </div>
                     </div>
                   </div>
                 </div>
-                <br>
-                <br>
-                <br>
               </div>
-                </li>
-              </ul>
+              <br>
+              <br>
+              <br>
             </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-    <br>
-    <br>
-  </section>
-  <section>
-    <div class="container-fluid" style="height: auto; background-color: #343a40">
-      <footer class="page-footer font-small indigo">
-        <div class="container text-center text-md-left">
-          <div class="row p-5">
-            <div class="col-sm mx-auto ">
-              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+  </div>
+  <br>
+  <br>
+</section>
+
+<!-- Information Section -->
+
+<section>
+  <div class="container-fluid" style="height: auto; background-color: #343a40">
+    <footer class="page-footer font-small indigo">
+      <div class="container text-center text-md-left">
+        <div class="row p-5">
+          <div class="col-sm mx-auto ">
+            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+            <br>
+            <ul class="list-unstyled">
+              <li>
+                <a id="text" class="text-light" href="#!">Home</a>
+              </li>
               <br>
-              <ul class="list-unstyled">
-                <li>
-                  <a id="text" class="text-light" href="#!">Home</a>
-                </li>
-                <br>
-                <li>
-                  <a id="text" class="text-light" href="#!">Faq</a>
-                </li>
-              </ul>
-            </div>
-            <hr class="clearfix w-100 d-md-none">
-            <div class="col-sm mx-auto">
-              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+              <li>
+                <a id="text" class="text-light" href="#!">Faq</a>
+              </li>
+            </ul>
+          </div>
+          <hr class="clearfix w-100 d-md-none">
+          <div class="col-sm mx-auto">
+            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+            <br>
+            <ul class="list-unstyled">
+              <li>
+                <a id="text" class="text-light" href="#!">Why Study with us?</a>
+              </li>
               <br>
-              <ul class="list-unstyled">
-                <li>
-                  <a id="text" class="text-light" href="#!">Why Study with us?</a>
-                </li>
-                <br>
-                <li>
-                  <a id="text" class="text-light" href="#!">Financial Aid - Study for Just R1</a>
-                </li>
-                <br>
-                <li>
-                  <a id="text" class="text-light" href="#!">Internship - Work, Learn & Earn</a>
-                </li>
-              </ul>
-            </div>
-            <hr class="clearfix w-100 d-md-none">
-            <div class="col-md-3 mx-auto align-iet">
-              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+              <li>
+                <a id="text" class="text-light" href="#!">Financial Aid - Study for Just R1</a>
+              </li>
               <br>
-              <ul class="list-unstyled">
-                <li>
-                  <a id="text" class="text-light" href="#!">Full Stack Web Developer</a>
-                </li>
-              </ul>
-            </div>
-            <hr class="clearfix w-100 d-md-none">
-            <div class="col-md-4 mx-auto">
-              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+              <li>
+                <a id="text" class="text-light" href="#!">Internship - Work, Learn & Earn</a>
+              </li>
+            </ul>
+          </div>
+          <hr class="clearfix w-100 d-md-none">
+          <div class="col-md-3 mx-auto align-iet">
+            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+            <br>
+            <ul class="list-unstyled">
+              <li>
+                <a id="text" class="text-light" href="#!">Full Stack Web Developer</a>
+              </li>
+            </ul>
+          </div>
+          <hr class="clearfix w-100 d-md-none">
+          <div class="col-md-4 mx-auto">
+            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+            <br>
+            <ul class="list-unstyled">
+              <li>
+                <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17" id="text">+27 21 461 68 17</a>
+              </li>
               <br>
-              <ul class="list-unstyled">
-                <li>
-                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17" id="text">+27 21 461 68 17</a>
-                </li>
-                <br>
-                <li>
-                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!" id="text">hello@themavenacademy.one</a>
-                </li>
-                <br>
-                <li>
-                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!" id="text">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
-                </li>
-              </ul>
-            </div>
+              <li>
+                <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!" id="text">hello@themavenacademy.one</a>
+              </li>
+              <br>
+              <li>
+                <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!" id="text">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </footer> 
-    </div>   
-  </section>
-  <footer>
-    <nav class="navbar navbar-expand-sm" style="height: auto; background-color: #0E1011;">
-      <ul class="navbar-nav">
-        <li class="nav-items text-light ml-5 footer-copyright" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
-      </ul>
-      <div id="pic01" class="pr-5">
-        <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
-       <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
-        <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
-    </div>
-    </nav>
-  </footer>
+      </div>
+    </footer> 
+  </div>   
+</section>
+
+<!-- Footer Section -->
+
+<footer>
+  <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #0E1011;">
+    <ul class="navbar-nav">
+      <li class="nav-items text-light ml-5 footer-copyright" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+    </ul>
+    <div id="pic01" class="pr-5">
+      <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
+      <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
+      <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
+  </div>
+  </nav>
+</footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
