--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
 <!-- Nav Section -->
 
   <header>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
@@ -29,7 +29,8 @@
             <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
             </li>
             <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
-            </li>  
+            </li> 
+            <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""> 
         </ul>
         </div>
       </div>  
@@ -44,20 +45,54 @@
     </div>
     <div class="row">
       <div class="col-sm-3">
-        <div class="my-5 ml-3">
-          <div>
-            <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
-            <p id="text" class="text-center small">12 Week Course - In classroom</p> 
+        <div class="carousel slide" data-ride="carousel" id="slider">
+          <div class="carousel-inner">
+            <div id="firstCarousel" class=" carousel-item active">
+              <div>
+                <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
+                <p id="text" class="text-center small">12 Week Course - In classroom</p> 
+              </div>
+            <div class="d-flex justify-content-center">
+            <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="max-width: 100%;width: 15rem;">
+            </div>
+            <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-primary text-center" id="addCart1">
+                  <span id="text">Add to cart</span>
+                </button>
+              </div>     
+            </div>
+            <div id="secondCarousel" class="carousel-item">
+              <div>
+                <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Front End Web Developer</h6>
+                <p id="text" class="text-center small">4 Week Course - In classroom</p> 
+              </div>
+            <div class="d-flex justify-content-center">
+            <img class="image-fluid ml-4" src="images/frontend-dev-banner.png" alt="" style="max-width: 100%;width: 15rem;">
+            </div>
+            <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-primary text-center" id="addCart2">
+                  <span id="text">Add to cart</span>
+                </button>
+              </div>     
+            </div>
+            <div id="thirdCarousel" class="carousel-item">
+              <div>
+                <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Java Spring Boot Developer</h6>
+                <p id="text" class="text-center small">12 Week Course - In classroom</p> 
+              </div>
+            <div class="d-flex justify-content-center">
+            <img class="image-fluid ml-4" src="images/spring-boot-dev.png" alt="" style="max-width: 100%;width: 15rem;">
+            </div>
+            <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-primary text-center" id="addCart3">
+                  <span id="text">Add to cart</span>
+                </button>
+              </div>     
+            </div>
           </div>
-        <div class="d-flex justify-content-center">
-        <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="max-width: 100%;width: 15rem;">
-        </div>
-        <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
-          <div class="d-flex justify-content-center">
-            <button class="btn btn-outline-primary text-center" id="addCart">
-              <span id="text">Add to cart</span>
-            </button>
-          </div>     
         </div>
       </div>
       <div class="col-8 mt-4 ml-5">
@@ -139,7 +174,6 @@
         </div>
       </div>
     </div>
-  </div>
   <br>
   <br>
 </section>
@@ -213,7 +247,8 @@
         </div>
       </div>
     </footer> 
-  </div>   
+  </div>
+  
 </section>
 
 <!-- Footer Section -->
@@ -233,5 +268,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="js/app.js">
+
+</script>
 </body>
 </html>
