--- a/index2.html
+++ b/index2.html
@@ -2,195 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Document</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
-    <div class="container">
-      <a class="navbar-brand" href="#">NavBar</a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="">Home</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Work</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Resources</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Contact Us</a></li>
-      </ul>
-      </div>
-  </nav>
-  <div class="icon">
-    <img src="images/app-summary-icon.svg" alt="">
+  <div class="container-fluid ml-1 mt-5 pt-5 pb-1" style="height: auto;">
+    <div class="main-title mt-3 mb-5">
+      <h1 id="text">
+        Cart
+      </h1>
+    </div>
   </div>
-  <div class="icon">
-    <img src="images/arrow-right.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/bachler-icon-blue.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/bachler-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/camera-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/candidates.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/career-boosters.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/career-changers.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/chat.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/chevron-down-blk.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/chevron-down.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/clock-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/close-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/comming-soon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/email-icon-blue.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/email-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/exper-review-l.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/expert-review.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/facebook.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/filter.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/find-intership.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/gift-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/googleplus.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/icon-code-editor.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/icon-dev-console.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/icon-intro.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/icon-manual.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/instagram.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/intern-programme.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/learn-creating.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/linked.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/location-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/logo.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/logo_big.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/maven_academy.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/medal-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/mentor-l.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/paper-plane.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/password-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/payment-logo.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/phone-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/play-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/recent-graduates.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/search-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/search.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/security-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/study-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/sun-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/sunrise-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/telescope-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/thumsUp.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/twitter.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/user-icon.svg" alt="">
-  </div>
-  <div class="icon">
-    <img src="images/wle-icon.svg" alt="">
-  </div>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <section>
+    <table class="table ml-3 mt-3">
+      <thead>
+        <tr>
+          <th style="width: 500px;">Product</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </body>
 </html>
