added the word typewriter effect

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <section>
   <div class="container-fluid p-5 mt-5" style="height: auto; background-color:rgba(91, 157, 227, 0.08)">
     <h1 id="text" class="text-center">Next level training in</h1> 
-      <h1 id="wordtoggle" class="text-center text-primary">User interface design</h1>
+      <h1 id="wordToggle" class="text-center text-primary">User interface design</h1>
         <div class="d-flex justify-content-center">
           <img class="img-fluid" src="images/tech-mavens.png" alt="" width="430px" height="350px">
         </div>
