fixed some persisting issues  with the cart

--- a/cart.html
+++ b/cart.html
@@ -65,6 +65,9 @@
           </td>
         </tr>
       </tbody>
+      <tbody class="cartContainerBelow">
+
+      </tbody>
     </table>
   </div>
 </section>
