made the table in the cart responsive

--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,7 @@
 <!-- Main Section -->
 
 <section id="main-table-cart">
-  <div>
+  <div class="table-responsive">
     <h1 class="ml-2">Cart</h1>
     <table id="cart-table-amounts" class="table table-borderless">
       <thead id="cart-table">
