working on the comments

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <script src="https://kit.fontawesome.com/1946a965ff.js" crossorigin="anonymous"></script>
+  <!-- Script tag link to external css file -->
   <link rel="stylesheet" href="css/main.css">
+  <!-- Script tag link to external bootstrap file for offline use -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Script tag link to google fonts for specfic font style -->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+  <!-- Script tag link to bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Maven Academy</title>
+  <!-- Script tags linked to owl carousel external files for rendering owl carousel in index.html -->
   <link rel="stylesheet" href="owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.min.css">
 </head>
 <body>
-
-<!-- Nav section -->
-
+<!-- Header section -->
   <header>
     <nav class="navbar navbar-expand-lg fixed-top nav-menu navbar-color">
       <a class="navbar-brand" href="index.html"><img src="images/maven_academy.svg" alt="maven-academy-icon"></a>
@@ -37,9 +40,9 @@
         </div>
     </nav>
   </header>
+  <!-- End of Header Section -->
 
 <!-- Main Section -->
-
 <section class="main-section mb-4">
   <div class="container-fluid p-5 mt-5">
     <h1 class="text-center all-maven-text">Next level training in</h1> 
@@ -57,9 +60,9 @@
     </div>
   </div>
 </section>
+<!-- End of Main Section -->
 
 <!-- Main Body Section -->
-
 <section class="main-body-section my-5">
   <div class="container-fluid"> 
     <div class="row">  
@@ -105,9 +108,9 @@
     </div>
   </div>
 </section>
+<!-- End of Main Body Section -->
 
 <!-- Main course section -->
-
 <section class="main-course-section">
   <div class="container-fluid">
     <h3 class="text-center pt-5 all-maven-text">Our Courses</h3>
@@ -168,9 +171,9 @@
     <img class="ml-2 my-4" src="images/arrow-right.svg" alt=""> 
   </div>
 </section>
+<!-- End of Main Courses Section -->
 
 <!-- Career section -->
-
 <section class="career-section">
   <div class="container-fluid">
     <div class="p-5">
@@ -194,9 +197,9 @@
     </div>
   </div>
 </section>
+<!-- End of Career Section -->
 
 <!-- Information Section -->
-
 <section class="information-section">
   <div class="container-fluid">
     <div class="carousel slide" data-ride="carousel" id="slide1">
@@ -247,9 +250,9 @@
     </div>
   </div>    
 </section>
+<!-- End of Information Section -->
 
 <!-- Bottom Contact Section -->
-
 <section class="bottom-contact-section mt-3">
   <div class="container-fluid">
     <div class="d-flex justify-content-center p-2">
@@ -263,9 +266,9 @@
     </div>
   </div> 
 </section>
+<!-- End of Bottom Contact Section -->
 
   <!-- Bottom Section -->
-
   <section class="bottom-section">
     <div class="container-fluid">
       <footer class="page-footer font-small indigo">
@@ -326,9 +329,9 @@
       </footer> `
     </div>
   </section>
+<!-- End of Bottom Section -->
 
  <!-- Footer Section -->
-
   <footer class="footer-section">
     <nav class="navbar navbar-expand-md navbar-dark navbar-color p-3">
       <div class="col-sm-12 col-md-6 col-lg-6">
@@ -345,13 +348,21 @@
       </div> 
     </nav> 
   </footer>
+  <!-- End of Footer -->
+  <!-- Script tag link to jQuery from bootstrap-->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<!-- Script tag link to popper js from bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<!-- Script tag link to Bootstrap from bootstrap website -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!-- Script tag link to external Javascript file -->
 <script src="js/jquery.js"></script>
+<!-- Script tag link to external Javascript file -->
 <script src="owl.carousel.min.js"></script>
+<!-- Script tag link to external Javascript file -->
 <script src="js/recent.js">
 </script>
+<!-- Script tag link to external Javascript file -->
 <script src="js/app.js"></script>
 </body>
 </html>
