--- a/courses.html
+++ b/courses.html
@@ -12,8 +12,7 @@
 </head>
 <body>
   
-<!-- Nav Section -->
-
+<!-- Header Section -->
 <header>
   <nav class="navbar navbar-expand-lg fixed-top nav-menu navbar-color">
     <a class="navbar-brand" href="index.html"><img src="images/maven_academy.svg" alt="maven-academy-icon"></a>
@@ -35,9 +34,9 @@
       </div>
   </nav>
 </header>
-  
-<!-- Main Section -->
+<!--End Header Section -->
 
+<!-- Main Section -->
 <section class="course-main-section">
   <div class="container-fluid">
     <div class="row">
@@ -49,13 +48,13 @@
                 <h6 class="font-weight-bold small text-center text-primary all-maven-text" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
                 <p class="text-center small all-maven-text">12 Week Course - In classroom</p> 
               </div>
-            <div class="d-flex justify-content-center">
-            <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="full-stack-dev-icon" style="max-width: 100%;width: 15rem;">
-            </div>
-            <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="full-stack-dev-icon" style="max-width: 100%;width: 15rem;">
+              </div>
+                <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
               <div class="d-flex justify-content-center">
                 <button class="btn btn-outline-primary text-center add-to-cart">
-                  <span class="add-to-cart-btn all-maven-text">Add to cart</span>
+                <span class="add-to-cart-btn all-maven-text">Add to cart</span>
                 </button>
               </div>     
             </div>
@@ -64,10 +63,10 @@
                 <h6 class="font-weight-bold small text-center text-primary all-maven-text" style="font-size: 15px ;">Become a Front End Web Developer</h6>
                 <p class="text-center small all-maven-text">4 Week Course - In classroom</p> 
               </div>
-            <div class="d-flex justify-content-center">
-            <img class="image-fluid ml-4" src="images/frontend-dev-banner.png" alt="frontend-dev-icon" style="max-width: 100%;width: 15rem;">
-            </div>
-            <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <img class="image-fluid ml-4" src="images/frontend-dev-banner.png" alt="frontend-dev-icon" style="max-width: 100%;width: 15rem;">
+              </div>
+              <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
               <div class="d-flex justify-content-center">
                 <button class="btn btn-outline-primary text-center add-to-cart">
                   <span class="add-to-cart-btn all-maven-text">Add to cart</span>
@@ -79,10 +78,10 @@
                 <h6 class="font-weight-bold small text-center text-primary all-maven-text" style="font-size: 15px ;">Become a Java Spring Boot Developer</h6>
                 <p class="text-center small all-maven-text">12 Week Course - In classroom</p> 
               </div>
-            <div class="d-flex justify-content-center">
-            <img class="image-fluid ml-4" src="images/spring-boot-dev.png" alt="" style="max-width: 100%;width: 15rem;">
-            </div>
-            <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
+              <div class="d-flex justify-content-center">
+                <img class="image-fluid ml-4" src="images/spring-boot-dev.png" alt="" style="max-width: 100%;width: 15rem;">
+              </div>
+              <p class="text-center text-primary font-weight-bold all-maven-text">R26,000,00 Excl Vat</p>
               <div class="d-flex justify-content-center">
                 <button class="btn btn-outline-primary text-center add-to-cart">
                   <span class="add-to-cart-btn all-maven-text">Add to cart</span>
@@ -98,6 +97,7 @@
           </div>
         </div>
       </div>
+
       <div class="col-8 mt-4 ml-5">
         <div class="mb-5">
           <h2 class="all-maven-text">
@@ -152,39 +152,34 @@
                       <ul class="list-unstyled">
                         <li class="media">
                           <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt=""> 
-                          <div class="media-body all-maven-text">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
-                          <div class="media-body all-maven-text">
-                            <div class="row">
-                              <div class="col-6 mt-3">
-                                <input class="form-control" type="email" placeholder="Enter your email here">
-                              </div>
-                              <div class="col-6 mt-3">
-                                <button id="modal-submit-button" class="btn btn-outline-primary w-75" data-dismiss="modal">Submit</button>
+                         <div class="media-body all-maven-text">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
+                            <div class="media-body all-maven-text">
+                              <div class="row">
+                                <div class="col-6 mt-3">
+                                  <input class="form-control" type="email" placeholder="Enter your email here">
+                                </div>
+                                <div class="col-6 mt-3">
+                                  <button id="modal-submit-button" class="btn btn-outline-primary w-75" data-dismiss="modal">Submit</button>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                          </div>
+                         </div>
                         </li>
                       </ul>
-                    </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <br>
-              <br>
-              <br>
             </div>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
+<!-- End Main Section -->
 
 <!-- Information Section -->
-
 <section class="bottom-section">
   <div class="container-fluid">
     <footer class="page-footer font-small indigo">
@@ -245,9 +240,9 @@
     </footer> `
   </div>
 </section>
+<!-- End Information Section -->
 
 <!-- Footer Section -->
-
 <footer class="footer-section">
   <nav class="navbar navbar-expand-md navbar-dark navbar-color p-3">
     <div class="col-sm-12 col-md-6 col-lg-6">
@@ -264,9 +259,13 @@
     </div> 
   </nav> 
 </footer>
+<!-- End Footer Section -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 <script src="js/app.js">
 </script>
 <script src="js/jquery.js"></script>
